[project]
name = "youtube-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "youtube-transcript-api>=1.2.4",
]
